src/test/testData/kubernetes/KUBE001/pod-container-user-zero.yaml.denied
apiVersion: v1
kind: Pod
metadata:
  name: static-web
  labels:
    role: myrole
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
      securityContext:
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: <error descr="Container runs as root or can gain root privileges.">0</error>